[package]
name = "grafana-dashboard-sync"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = { version = "1.0" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.15", features = ["macros", "rt"] }
toml = "0.5"
